--- a/vue-myown-template/index.html
+++ b/vue-myown-template/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="app">
         <!-- Insert Vue intro header here -->
-         <h1>{{ intro }}</h1>
+         <h1>{{ title }}</h1>
     </div>
     <script src="./js/main.js"></script>
     <script>
