--- a/vue-myown-template/index.html
+++ b/vue-myown-template/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
     <!-- TODO: Import Vue.js core library -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="https://unpkg.com/axios@1.6.7/dist/axios.min.js"></script>
 </head>
 
 <body>
